if(ANDROID)
  enable_language(CXX)

  add_custom_target(ejs_android_modules_java)
  add_library(ejs_android_modules_metadata INTERFACE)
  add_custom_target(ejs_android_modules_export)
  add_dependencies(ejs_android_modules_export ejs_android_modules_java)

  set(EJS_ANDROID_MODULES_EXPORT_DIR
      "${CMAKE_CURRENT_BINARY_DIR}/android-modules"
      CACHE PATH
      "Directory where Android module packaging metadata is exported")
  set(EJS_ANDROID_MANIFEST_PERMISSIONS_XML
      "${EJS_ANDROID_MODULES_EXPORT_DIR}/AndroidManifest.permissions.xml")

  set(EJS_ANDROID_REQUIRED_ENGINE_NOTE
      "Android module installation evaluates JavaScript bundles and requires a non-stub JavaScript engine such as quickjs-ng.")

  set_target_properties(ejs_android_modules_java PROPERTIES
    EJS_ANDROID_REQUIRED_ENGINE_NOTE "${EJS_ANDROID_REQUIRED_ENGINE_NOTE}"
  )
  set_target_properties(ejs_android_modules_metadata PROPERTIES
    INTERFACE_EJS_ANDROID_REQUIRED_ENGINE_NOTE "${EJS_ANDROID_REQUIRED_ENGINE_NOTE}"
  )
  set_target_properties(ejs_android_modules_export PROPERTIES
    EJS_ANDROID_EXPORT_DIR "${EJS_ANDROID_MODULES_EXPORT_DIR}"
  )

  file(MAKE_DIRECTORY "${EJS_ANDROID_MODULES_EXPORT_DIR}")
  file(GENERATE
    OUTPUT "${EJS_ANDROID_MODULES_EXPORT_DIR}/module_paths.txt"
    CONTENT "$<JOIN:$<REMOVE_DUPLICATES:$<TARGET_PROPERTY:ejs_android_modules_java,EJS_ANDROID_MODULE_PATHS>>,\n>\n"
  )
  file(GENERATE
    OUTPUT "${EJS_ANDROID_MODULES_EXPORT_DIR}/java_source_roots.txt"
    CONTENT "$<JOIN:$<REMOVE_DUPLICATES:$<TARGET_PROPERTY:ejs_android_modules_java,EJS_ANDROID_JAVA_SOURCE_ROOTS>>,\n>\n"
  )
  file(GENERATE
    OUTPUT "${EJS_ANDROID_MODULES_EXPORT_DIR}/java_sources.txt"
    CONTENT "$<JOIN:$<REMOVE_DUPLICATES:$<TARGET_PROPERTY:ejs_android_modules_java,EJS_ANDROID_JAVA_SOURCES>>,\n>\n"
  )
  file(GENERATE
    OUTPUT "${EJS_ANDROID_MODULES_EXPORT_DIR}/resource_dirs.txt"
    CONTENT "$<JOIN:$<REMOVE_DUPLICATES:$<TARGET_PROPERTY:ejs_android_modules_java,EJS_ANDROID_RESOURCE_DIRS>>,\n>\n"
  )
  file(GENERATE
    OUTPUT "${EJS_ANDROID_MODULES_EXPORT_DIR}/manifest_permissions.txt"
    CONTENT "$<JOIN:$<REMOVE_DUPLICATES:$<TARGET_PROPERTY:ejs_android_modules_java,EJS_ANDROID_REQUIRED_MANIFEST_PERMISSIONS>>,\n>\n"
  )
  add_custom_command(
    OUTPUT "${EJS_ANDROID_MANIFEST_PERMISSIONS_XML}"
    COMMAND ${CMAKE_COMMAND}
            -DPERMISSIONS_FILE=${EJS_ANDROID_MODULES_EXPORT_DIR}/manifest_permissions.txt
            -DOUT=${EJS_ANDROID_MANIFEST_PERMISSIONS_XML}
            -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/write_manifest_permissions.cmake
    DEPENDS
      ${EJS_ANDROID_MODULES_EXPORT_DIR}/manifest_permissions.txt
      ${CMAKE_CURRENT_SOURCE_DIR}/cmake/write_manifest_permissions.cmake
    VERBATIM
  )
  add_custom_target(ejs_android_modules_manifest
    DEPENDS "${EJS_ANDROID_MANIFEST_PERMISSIONS_XML}"
  )
  add_dependencies(ejs_android_modules_export ejs_android_modules_manifest)
  file(GENERATE
    OUTPUT "${EJS_ANDROID_MODULES_EXPORT_DIR}/engine_requirement.txt"
    CONTENT "${EJS_ANDROID_REQUIRED_ENGINE_NOTE}\n"
  )
  file(GENERATE
    OUTPUT "${EJS_ANDROID_MODULES_EXPORT_DIR}/README.md"
    CONTENT "# EJS Android modules metadata export\n\nThis directory is generated by the `ejs_android_modules_export` target.\n\n- `module_paths.txt`: module roots that contributed Android metadata.\n- `java_source_roots.txt`: Java source roots for Gradle/AAR source sets.\n- `java_sources.txt`: concrete Java source files, including generated bundle classes.\n- `resource_dirs.txt`: resource roots containing copied JavaScript bundle resources.\n- `manifest_permissions.txt`: required Android manifest permissions before de-duplication.\n- `AndroidManifest.permissions.xml`: permission-only manifest snippet for consumers that want XML input.\n- `engine_requirement.txt`: runtime engine requirement for JS bundle installation.\n\nThe final Android app or AAR packaging layer must de-duplicate lists, merge permissions into its real manifest, and compile with a non-stub JavaScript engine such as quickjs-ng.\n"
  )
  
  add_library(ejs_android_platform SHARED
    jni/ejs_android_platform.cpp
  )

  target_include_directories(ejs_android_platform
    PUBLIC
      ${CMAKE_CURRENT_SOURCE_DIR}/jni
    PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}/../../core/include
  )

  if(CMAKE_SYSTEM_NAME STREQUAL "Android")
    target_link_libraries(ejs_android_platform
      PUBLIC
        ejs_core
        log
    )
  else()
    target_link_libraries(ejs_android_platform
      PUBLIC
        ejs_core
    )
  endif()

  if(EJS_TEST)
    target_compile_definitions(ejs_android_platform PRIVATE EJS_TEST=1)
  endif()
endif()
